--- a/index.css
+++ b/index.css
@@ -48,7 +48,7 @@ body {
 }
 
 .cards-section {
-  padding: 2.25rem;
+  padding: 4rem 2.25rem;
   display: flex;
   flex-direction: row;
   align-items: center;
